2009-10-29  Andreas Schwab  <schwab@redhat.com>

	* malloc/memusage.c (update_data): Fix index wraparound handling
	so that buffer_cnt is actually reset.

2009-10-29  Ulrich Drepper  <drepper@redhat.com>

	[BZ #10784]
	* sysdeps/unix/sysv/linux/ttyname.c (getttyname): Always copy name
	of the directory we look at into the static buffer if there is one
	at the start of the loop.

	[BZ #10789]
	* sysdeps/generic/netinet/ip.h: Define IPTOS_ENC* and IPTOS_DSCP*
	macros.  Patch by Philip Prindeville <philipp@redfish-solutions.com>.

	[BZ #10840]
	* sysdeps/unix/sysv/linux/kernel-features.h: Define
	__ASSUME_F_GETOWN_EX.
	* sysdeps/unix/sysv/linux/fcntl.c: Implement F_GETOWN using F_GETOWN_EX
	if possible.
	* sysdeps/unix/sysv/linux/i386/fcntl.c: Likewise.

	* sysdeps/unix/sysv/linux/sh/bits/fcntl.h: Define F_OWNER_*
	and f_owner_ex.
	* sysdeps/unix/sysv/linux/powerpc/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/ia64/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/i386/bits/fcntl.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/bits/fcntl.h: Likewise.

	[BZ #10847]
	* sysdeps/gnu/getutmp.c: Allow compatibility code to play around with
	getutmpx symbol.

	[BZ #10823]
	* resolv/res_send.c (__libc_res_nsend): Fix copying of IPv4 server
	addresses.  Patch by Petar Bogdanovic <petar@smokva.net>.

2009-10-24  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/ieee754/ldbl-128/w_expl.c: Add hidden_def (__expl).

2009-10-27  Jakub Jelinek  <jakub@redhat.com>

	[BZ #10817]
	* math/w_coshl.c (__coshl): Use __finitel instead of __finite.
	Reported by Ray Chason.

2009-10-21  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/multiarch/Makefile (sysdep_routines): Add
	strend-sse4.
	* sysdeps/x86_64/multiarch/strchr.S: New file.
	* sysdeps/x86_64/multiarch/strend-sse4.S: New file.
	* sysdeps/x86_64/multiarch/strrchr.S: New file.
